# Lilac

./: .gitignore  CMakeLists.txt  Makefile  TESTUDO_CUSTOM_MAKEFILE  output
data/: compiles.llc  driver.llc  enum.llc  function.llc  test.bc  test.ll
include/: debugmode.h  test.h  typedefs.h
include/AST/: astdefinition.h  asttree.h  astvalue.h  enumdeclaration.h  functiondeclaration.h  operation.h
include/AST/ASTValues/: astblock.h  astif.h  enumaccess.h  functioncall.h  literal.h  tuple.h  variable.h
include/compiler/: compiler.h  compilersettings.h
include/compiler/llvm-primitives/: llvmops.h
include/errors/: lassert.h
include/lexer/: filestream.h  lexerfunctions.h  token.h  tokenizer.h  tokenkind.h
include/parser/: parser.h  parser_data.h
include/parser/AST/: astnode.h  asttree.h  astvalue.h  expression.h  functioncall.h  functiondeclaration.h  operation.h
include/parser/AST/ASTValues/: tuple.h
include/parser/primitives/: functions.h
src/: main.cpp  test.cpp
src/AST/: astdefinition.cpp  asttree.cpp  enumdeclaration.cpp  functiondeclaration.cpp
src/AST/ASTValues/: astblock.cpp  astif.cpp  enumaccess.cpp  functioncall.cpp  literal.cpp  tuple.cpp  variable.cpp
src/compiler/: compiler.cpp
src/compiler/llvm-primitives/: llvmops.cpp
src/lexer/: filestream.cpp  lexerfunctions.cpp  token.cpp  tokenizer.cpp  tokenkind.cpp
src/parser/: parser.cpp  parser_data.cpp
src/parser/AST/: astnode.cpp  asttree.cpp  expression.cpp  functioncall.cpp  functiondeclaration.cpp
src/parser/AST/ASTValues/: expression.cpp  functioncall.cpp  tuple.cpp
tests/: test.ttd  tokenkind.ttd
tests/data/: function.llc
tests/lexer/: tokenizer.ttd  tokenkind.ttd
